--- a/src/KitchenHell.Orders.Api/Dockerfile
+++ b/src/KitchenHell.Orders.Api/Dockerfile
@@ -5,17 +5,10 @@ ENV PATH="$PATH:/root/.dotnet/tools"
 
 WORKDIR /repoRoot
 
-# restore packages and cache layers in docker context
-COPY ["./*.props", "./"]
-COPY ["./src/KitchenHell.Orders.Api/KitchenHell.Orders.Api.csproj", "./src/KitchenHell.Orders.Api/"]
-COPY ["./src/KitchenHell.Orders.Persistence/KitchenHell.Orders.Persistence.csproj", "./src/KitchenHell.Orders.Persistence/"]
-RUN dotnet restore "./src/KitchenHell.Orders.Api"
-
-# not cached, so after restore operations
 RUN dotnet tool install --global dotnet-ef 
 
-# copy the rest of the files and build using already restored files
 COPY . .
+RUN dotnet restore "./src/KitchenHell.Orders.Api"
 RUN dotnet build "./src/KitchenHell.Orders.Api" -c $BUILD_CONFIGURATION --no-restore
 
 FROM build AS publish
@@ -33,4 +26,4 @@ FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
 EXPOSE 8080
 WORKDIR /app
 COPY --from=publish /app/publish .
-ENTRYPOINT ["dotnet", "KitchenHell.dll"]
+ENTRYPOINT ["dotnet", "KitchenHell.Orders.Api.dll"]
