--- a/src/KitchenHell.Orders.Persistence/KitchenHell.Orders.Persistence.csproj
+++ b/src/KitchenHell.Orders.Persistence/KitchenHell.Orders.Persistence.csproj
@@ -13,4 +13,7 @@
         <Using Include="System.ComponentModel.DataAnnotations" />
         <Using Include="System.ComponentModel.DataAnnotations.Schema" />
     </ItemGroup>
+    <ItemGroup>
+        <ProjectReference Include="..\KitchenHell.Orders.Business\KitchenHell.Orders.Business.csproj" />
+    </ItemGroup>
 </Project>
