--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -11,9 +11,12 @@
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
+        <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
         <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
         <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
         <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+        <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
         <PackageVersion Include="Serilog.AspNetCore" Version="8.0.0" />
         <PackageVersion Include="Serilog.Sinks.Async" Version="1.5.0" />
         <PackageVersion Include="Serilog.Sinks.Console" Version="5.0.1" />
