--- a/src/KitchenHell.Orders.Api/KitchenHell.Orders.Api.csproj
+++ b/src/KitchenHell.Orders.Api/KitchenHell.Orders.Api.csproj
@@ -1,9 +1,6 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <ItemGroup>
-        <PackageReference Include="Grpc.AspNetCore" />
-        <PackageReference Include="Grpc.AspNetCore.HealthChecks" />
-        <PackageReference Include="Grpc.AspNetCore.Server.Reflection" />
         <PackageReference Include="Grpc.Tools">
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
@@ -12,13 +9,12 @@
             <PrivateAssets>all</PrivateAssets>
             <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
         </PackageReference>
-        <PackageReference Include="Serilog.AspNetCore" />
-        <PackageReference Include="Serilog.Sinks.Async" />
-        <PackageReference Include="Serilog.Sinks.Console" />
-        <PackageReference Include="Serilog.Sinks.Console.LogThemes" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\KitchenHell.Common.GrpcServices\KitchenHell.Common.GrpcServices.csproj" />
+        <ProjectReference Include="..\KitchenHell.Common.Web\KitchenHell.Common.Web.csproj" />
+        <ProjectReference Include="..\KitchenHell.Orders.Business\KitchenHell.Orders.Business.csproj" />
         <ProjectReference Include="..\KitchenHell.Orders.Persistence\KitchenHell.Orders.Persistence.csproj" />
     </ItemGroup>
 
@@ -37,14 +33,6 @@
             <Link>.dockerignore</Link>
         </Content>
     </ItemGroup>
-
-    <ItemGroup>
-        <PackageVersion Update="Microsoft.EntityFrameworkCore.Design" Version="8.0.0">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageVersion>
-    </ItemGroup>
-
 
 </Project>
  
