added basic bus consumers and handlers; docker compose setup update

--- a/src/KitchenHell.Orders.Api/appsettings.json
+++ b/src/KitchenHell.Orders.Api/appsettings.json
@@ -1,6 +1,43 @@
 {
+  "AllowedHosts": "*",
   "ConnectionStrings": {
     "Orders": "Server=localhost;Initial Catalog=kitchen-hell;User Id=test;Password=Password1! ;Persist Security Info=False;Encrypt=False;MultipleActiveResultSets=True"
+  },
+  "Messaging": {
+    "Consumers": {
+      "Settings": {
+        "IsEnabled": true,
+        "MaxSubscribeRetryCount": 10,
+        "Kafka": {
+          "BootstrapServers": "localhost:9091,localhost:9092",
+          "EnableAutoCommit": true,
+          "EnableAutoOffsetStore": false,
+          "GroupId": "orders-service"
+        }
+      },
+      "Topics": {
+        "OrderStatusUpdates": {
+          "TopicName": "orders_status_updates"
+        },
+        "OrderRestaurantStatusUpdates": {
+          "TopicName": "orders_restaurant_status_updates"
+        }
+      }
+    },
+    "Producers": {
+      "Settings": {
+        "IsEnabled": true,
+        "Kafka": {
+          "BootstrapServers": "localhost:9091,localhost:9092",
+          "Acks": "Leader"
+        }
+      },
+      "Topics": {
+        "OrderCreated": {
+          "TopicName": "orders_created"
+        }
+      }
+    }
   },
   "Serilog": {
     "MinimumLevel": {
@@ -11,6 +48,5 @@
     "EndpointDefaults": {
       "Protocols": "Http2"
     }
-  },
-  "AllowedHosts": "*"
+  }
 }
