--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -4,6 +4,7 @@
         <CentralPackageVersionOverrideEnabled>true</CentralPackageVersionOverrideEnabled>
     </PropertyGroup>
     <ItemGroup>
+        <PackageVersion Include="Confluent.Kafka" Version="2.3.0" />
         <PackageVersion Include="Grpc.AspNetCore" Version="2.59.0" />
         <PackageVersion Include="Grpc.AspNetCore.HealthChecks" Version="2.59.0" />
         <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.59.0" />
@@ -17,6 +18,7 @@
         <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
         <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
         <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+        <PackageVersion Include="Polly" Version="8.2.0" />
         <PackageVersion Include="Serilog.AspNetCore" Version="8.0.0" />
         <PackageVersion Include="Serilog.Sinks.Async" Version="1.5.0" />
         <PackageVersion Include="Serilog.Sinks.Console" Version="5.0.1" />
