--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -21,8 +21,10 @@ services:
       context: ../
       dockerfile: ./src/KitchenHell.Orders.Api/Dockerfile
     environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__Orders=Server=database;Initial Catalog=kh;User Id=kitchen;Password=OpenAI@2023;Persist Security Info=False;Encrypt=False;Connection Timeout=30;
+      ASPNETCORE_ENVIRONMENT: Development
+      ConnectionStrings__Orders: Server=database;Initial Catalog=kh;User Id=kitchen;Password=OpenAI@2023;Persist Security Info=False;Encrypt=False;Connection Timeout=30;
+      Messaging__Consumers__Settings__Kafka__BootstrapServers: "broker-1:29091,broker-2:29092"
+      Messaging__Producers__Settings__Kafka__BootstrapServers: "broker-1:29091,broker-2:29092"
     depends_on:
       database-gates:
         condition: service_completed_successfully
@@ -61,8 +63,93 @@ services:
       - MSSQL_SA_PASSWORD=Kitchen#2023
     ports:
       - 2433:1433
-#    volumes:
-#      - database:/var/opt/mssql
 
-#volumes:
-#  database:
+  zookeeper:
+    image: confluentinc/cp-zookeeper:7.3.2
+    ports:
+      - "2181:2181"
+    environment:
+      ZOOKEEPER_SERVER_ID: "1"
+      ZOOKEEPER_SERVERS: "zookeeper:2888:3888"
+      ZOOKEEPER_CLIENT_PORT: "2181"
+      ZOOKEEPER_PEER_PORT: "2888"
+      ZOOKEEPER_LEADER_PORT: "3888"
+      ZOOKEEPER_INIT_LIMIT: "10"
+      ZOOKEEPER_SYNC_LIMIT: "5"
+      ZOOKEEPER_MAX_CLIENT_CONNS: "5"
+
+  broker-1: &broker-base
+    image: confluentinc/cp-kafka:7.3.2
+    ports:
+      - "9091:9091"
+    environment:
+      KAFKA_BROKER_ID: "1"
+      KAFKA_BROKER_RACK: "1"
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_INTERNAL://broker-1:29091,LISTENER_LOCAL://localhost:9091
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_INTERNAL:PLAINTEXT,LISTENER_LOCAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: "LISTENER_INTERNAL"
+      KAFKA_DEFAULT_REPLICATION_FACTOR: "2"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "2"
+      KSQL_KSQL_STREAMS_REPLICATION_FACTOR: "2"
+      CONTROL_CENTER_REPLICATION_FACTOR: "2"
+    depends_on:
+      - zookeeper
+
+  broker-2:
+    <<: *broker-base
+    ports:
+      - "9092:9092"
+    environment:
+      KAFKA_BROKER_ID: "2"
+      KAFKA_BROKER_RACK: "2"
+      KAFKA_ZOOKEEPER_CONNECT: "zookeeper:2181"
+      KAFKA_ADVERTISED_LISTENERS: LISTENER_INTERNAL://broker-2:29092,LISTENER_LOCAL://localhost:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: LISTENER_INTERNAL:PLAINTEXT,LISTENER_LOCAL:PLAINTEXT
+      KAFKA_INTER_BROKER_LISTENER_NAME: "LISTENER_INTERNAL"
+      KAFKA_DEFAULT_REPLICATION_FACTOR: "2"
+      KAFKA_OFFSETS_TOPIC_REPLICATION_FACTOR: "2"
+      KSQL_KSQL_STREAMS_REPLICATION_FACTOR: "2"
+      CONTROL_CENTER_REPLICATION_FACTOR: "2"
+    depends_on:
+      - zookeeper
+
+  init-kafka:
+    image: confluentinc/cp-kafka:7.3.2
+    environment:
+      BROKERS: "broker-1:29091,broker-2:29092"
+    entrypoint: [ '/bin/sh', '-c' ]
+    command: |
+      "
+      set -x
+
+      # blocks until kafka is reachable
+      kafka-topics --bootstrap-server $${BROKERS} --list
+
+      echo -e 'Creating/Updating kafka topics'
+      kafka-topics --bootstrap-server $${BROKERS} --create --if-not-exists --replication-factor 2 --topic orders_status_updates
+      kafka-topics --bootstrap-server $${BROKERS} --create --if-not-exists --replication-factor 2 --topic orders_created
+      kafka-topics --bootstrap-server $${BROKERS} --create --if-not-exists --replication-factor 2 --topic orders_restaurant_status_updates
+
+      kafka-topics --bootstrap-server $${BROKERS} --alter --partitions 2 --topic orders_status_updates
+      kafka-topics --bootstrap-server $${BROKERS} --alter --partitions 2 --topic orders_created
+      kafka-topics --bootstrap-server $${BROKERS} --alter --partitions 2 --topic orders_restaurant_status_updates
+
+      echo -e 'Successfully created the following topics:'
+      kafka-topics --bootstrap-server $${BROKERS} --list
+      "
+    depends_on:
+      - broker-1
+      - broker-2
+
+  kafka-ui:
+    container_name: kafka-ui
+    image: provectuslabs/kafka-ui:latest
+    ports:
+      - 8092:8080
+    environment:
+      KAFKA_CLUSTERS_0_NAME: "kafka-brokers"
+      KAFKA_CLUSTERS_0_BOOTSTRAPSERVERS: "broker-1:29091,broker-2:29092"
+      AUTH_TYPE: "DISABLED"
+      MANAGEMENT_HEALTH_LDAP_ENABLED: "FALSE"
+      DYNAMIC_CONFIG_ENABLED: 'true'
