added connection string to restaurants

--- a/src/KitchenHell.Restaurants.Api/appsettings.json
+++ b/src/KitchenHell.Restaurants.Api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "Restaurants": "Server=localhost;Initial Catalog=kh;User Id=kitchen;Password=OpenAI@2023;Persist Security Info=False;Encrypt=False;MultipleActiveResultSets=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
