updatd db port in settings

--- a/src/KitchenHell.Orders.Api/appsettings.json
+++ b/src/KitchenHell.Orders.Api/appsettings.json
@@ -1,7 +1,7 @@
 {
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Orders": "Server=localhost;Initial Catalog=kh;User Id=kitchen;Password=OpenAI@2023;Persist Security Info=False;Encrypt=False;MultipleActiveResultSets=True"
+    "Orders": "Server=localhost,2433;Initial Catalog=kh;User Id=kitchen;Password=OpenAI@2023;Persist Security Info=False;Encrypt=False;MultipleActiveResultSets=True"
   },
   "Messaging": {
     "Consumers": {
