--- a/src/KitchenHell.Restaurants.Api/appsettings.json
+++ b/src/KitchenHell.Restaurants.Api/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "Restaurants": "Server=localhost;Initial Catalog=kh;User Id=kitchen;Password=OpenAI@2023;Persist Security Info=False;Encrypt=False;MultipleActiveResultSets=True"
+    "Restaurants": "Server=localhost,2433;Initial Catalog=kh;User Id=kitchen;Password=OpenAI@2023;Persist Security Info=False;Encrypt=False;MultipleActiveResultSets=True"
   },
   "Logging": {
     "LogLevel": {
