--- a/src/KitchenHell.Api/KitchenHell.Api.csproj
+++ b/src/KitchenHell.Api/KitchenHell.Api.csproj
@@ -1,27 +1,37 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
 
     <ItemGroup>
-        <PackageReference Include="Grpc.AspNetCore" />
+        <PackageReference Include="Grpc.Tools">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Design">
+            <PrivateAssets>all</PrivateAssets>
+            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+        </PackageReference>
     </ItemGroup>
 
     <ItemGroup>
         <ProjectReference Include="..\KitchenHell.Common.GrpcServices\KitchenHell.Common.GrpcServices.csproj" />
         <ProjectReference Include="..\KitchenHell.Common.Web\KitchenHell.Common.Web.csproj" />
+        <ProjectReference Include="..\KitchenHell.Orders.Business\KitchenHell.Orders.Business.csproj" />
         <ProjectReference Include="..\KitchenHell.Orders.Persistence\KitchenHell.Orders.Persistence.csproj" />
         <ProjectReference Include="..\KitchenHell.Restaurants.Business\KitchenHell.Restaurants.Business.csproj" />
         <ProjectReference Include="..\KitchenHell.Restaurants.Persistence\KitchenHell.Restaurants.Persistence.csproj" />
     </ItemGroup>
 
     <ItemGroup>
-        <Using Include="KitchenHell.Restaurants.Api" />
+        <Using Include="KitchenHell.Api" />
     </ItemGroup>
 
     <ItemGroup>
+        <Protobuf Include="..\..\protos\orders-svc.proto" GrpcServices="Server" ProtoRoot="..\..\protos">
+            <Link>Grpcs\Protos\orders-svc.proto</Link>
+        </Protobuf>
         <Protobuf Include="..\..\protos\restaurants-svc.proto" GrpcServices="Server" ProtoRoot="..\..\protos">
             <Link>Grpcs\Protos\restaurants-svc.proto</Link>
         </Protobuf>
     </ItemGroup>
-
 
     <ItemGroup>
         <Content Include="..\..\.dockerignore">
@@ -29,5 +39,5 @@
         </Content>
     </ItemGroup>
 
-
 </Project>
+ 
