--- a/src/KitchenHell.Api/appsettings.json
+++ b/src/KitchenHell.Api/appsettings.json
@@ -17,11 +17,14 @@
         }
       },
       "Topics": {
-        "OrderStatusUpdates": {
+        "OrderStatusUpdated": {
           "TopicName": "orders_status_updates"
         },
-        "OrderRestaurantStatusUpdates": {
+        "OrderRestaurantStatusUpdated": {
           "TopicName": "orders_restaurant_status_updates"
+        },
+        "OrderCreated": {
+          "TopicName": "orders_created"
         }
       }
     },
