--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -9,6 +9,8 @@
         <PackageVersion Include="Grpc.AspNetCore.HealthChecks" Version="2.59.0" />
         <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.59.0" />
         <PackageVersion Include="Grpc.Tools" Version="2.59.0" />
+        <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" />
+        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
         <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
