--- a/src/KitchenHell.Business/KitchenHell.Business.csproj
+++ b/src/KitchenHell.Business/KitchenHell.Business.csproj
@@ -1,10 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
+    <PropertyGroup>
+        <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
+    </PropertyGroup>
+
     <ItemGroup>
         <PackageReference Include="Microsoft.Extensions.DependencyInjection.Abstractions" />
     </ItemGroup>
 
     <ItemGroup>
+        <ProjectReference Include="..\KitchenHell.Messaging.Generators\KitchenHell.Messaging.Generators.csproj"
+                          OutputItemType="Analyzer"
+                          ReferenceOutputAssembly="false" />
         <ProjectReference Include="..\KitchenHell.Messaging.Kafka\KitchenHell.Messaging.Kafka.csproj" />
     </ItemGroup>
 
