--- a/src/KitchenHell.Common.GrpcServices/KitchenHell.Common.GrpcServices.csproj
+++ b/src/KitchenHell.Common.GrpcServices/KitchenHell.Common.GrpcServices.csproj
@@ -1,14 +1,18 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
-    <ItemGroup>
-        <PackageReference Include="Grpc.AspNetCore" />
-        <PackageReference Include="Grpc.AspNetCore.HealthChecks" />
-        <PackageReference Include="Grpc.AspNetCore.Server.Reflection" />
-        <PackageReference Include="Grpc.Tools">
-            <PrivateAssets>all</PrivateAssets>
-            <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
-        </PackageReference>
-        <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
-    </ItemGroup>
+  <ItemGroup>
+    <PackageReference Include="Grpc.AspNetCore" />
+    <PackageReference Include="Grpc.AspNetCore.HealthChecks" />
+    <PackageReference Include="Grpc.AspNetCore.Server.Reflection" />
+    <PackageReference Include="Grpc.Tools">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\..\KitchenHell.Common\KitchenHell.Common.csproj" />
+  </ItemGroup>
 
 </Project>
