--- a/src/KitchenHell.Api/Dockerfile
+++ b/src/KitchenHell.Api/Dockerfile
@@ -10,10 +10,12 @@ ENV PATH="$PATH:/root/.dotnet/tools"
 
 WORKDIR /repoRoot
 
-RUN dotnet tool install --global dotnet-ef 
+RUN dotnet tool install --global dotnet-ef
 
 COPY . .
 RUN dotnet restore "./src/KitchenHell.Api"
+RUN dotnet restore "./src/KitchenHell.Persistence.Orders/"
+RUN dotnet restore "./src/KitchenHell.Persistence.Restaurants/"
 RUN dotnet build "./src/KitchenHell.Api" -c $BUILD_CONFIGURATION --no-restore
 
 ###############
@@ -22,7 +24,7 @@ RUN dotnet build "./src/KitchenHell.Api" -c $BUILD_CONFIGURATION --no-restore
 FROM build AS publish
 ARG BUILD_CONFIGURATION
 RUN dotnet publish "./src/KitchenHell.Api" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false --no-restore --no-build
-RUN dotnet ef migrations bundle -p "./src/KitchenHell.Orders.Persistence/"  \
+RUN dotnet ef migrations bundle --startup-project "./src/KitchenHell.Api" --context OrdersDbContext \
     -r linux-x64  \
     --configuration $BUILD_CONFIGURATION  \
     -o /app/publish/efbundle-orders  \
@@ -30,7 +32,7 @@ RUN dotnet ef migrations bundle -p "./src/KitchenHell.Orders.Persistence/"  \
     --no-build  \
     --verbose
 
-RUN dotnet ef migrations bundle -p "./src/KitchenHell.Restaurants.Persistence/"  \
+RUN dotnet ef migrations bundle --startup-project "./src/KitchenHell.Api" --context RestaurantsDbContext \
     -r linux-x64  \
     --configuration $BUILD_CONFIGURATION  \
     -o /app/publish/efbundle-restaurants  \
@@ -42,6 +44,10 @@ RUN dotnet ef migrations bundle -p "./src/KitchenHell.Restaurants.Persistence/" 
 ### Final ###
 #############
 FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS final
+RUN apt-get update && apt-get install -y --no-install-recommends \
+    curl \
+    && rm -rf /var/lib/apt/lists/*
+
 EXPOSE 8080
 WORKDIR /app
 COPY --from=publish /app/publish .
