--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -17,7 +17,17 @@ services:
         condition: service_completed_successfully
     ports:
       - 9081:8080
-  
+
+  activity-generators:
+    image: kitchenhell-activity-generators
+    build:
+      context: ../
+      dockerfile: ./src/KitchenHell.ActivityGenerators/Dockerfile
+    environment:
+      ASPNETCORE_ENVIRONMENT: Development
+      Clients__OrdersSvc__Address: api:8080
+      Clients__RestaurantsSvc__Address: api:8080
+
   database-dummy-data:
     image: mcr.microsoft.com/mssql-tools:latest
     command: ""
