added order generation service

--- a/src/KitchenHell.ActivityGenerators/appsettings.Development.json
+++ b/src/KitchenHell.ActivityGenerators/appsettings.Development.json
@@ -1,9 +1,18 @@
 {
+  "Clients": {
+    "OrdersSvc": {
+      "Address": "http://localhost:9081"
+    },
+    "RestaurantsSvc": {
+      "Address": "http://localhost:9081"
+    }
+  },
   "Serilog": {
     "MinimumLevel": {
       "Default": "Information",
       "Override": {
-        "Microsoft.AspNetCore": "Warning"
+        "Microsoft.AspNetCore": "Warning",
+        "System.Net.Http.HttpClient": "Warning"
       }
     }
   }
