--- a/compose/docker-compose.yml
+++ b/compose/docker-compose.yml
@@ -25,8 +25,8 @@ services:
       dockerfile: ./src/KitchenHell.ActivityGenerators/Dockerfile
     environment:
       ASPNETCORE_ENVIRONMENT: Development
-      Clients__OrdersSvc__Address: api:8080
-      Clients__RestaurantsSvc__Address: api:8080
+      Clients__OrdersSvc__Address: http://api:8080
+      Clients__RestaurantsSvc__Address: http://api:8080
 
   database-dummy-data:
     image: mcr.microsoft.com/mssql-tools:latest
