--- a/src/KitchenHell.Api/appsettings.json
+++ b/src/KitchenHell.Api/appsettings.json
@@ -49,8 +49,15 @@
     }
   },
   "Kestrel": {
-    "EndpointDefaults": {
-      "Protocols": "Http2"
+    "Endpoints": {
+      "Http": {
+        "Protocols": "Http1",
+        "Url": "http://localhost:8081"
+      },
+      "Grpc": {
+        "Protocols": "Http2",
+        "Url": "http://localhost:58081"
+      }
     }
   }
 }
