--- a/src/KitchenHell.Common.Grpc.Registrations/KitchenHell.Common.Grpc.Registrations.csproj
+++ b/src/KitchenHell.Common.Grpc.Registrations/KitchenHell.Common.Grpc.Registrations.csproj
@@ -12,7 +12,6 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\KitchenHell.Common\KitchenHell.Common.csproj" />
+    <ProjectReference Include="..\KitchenHell.Common\KitchenHell.Common.csproj" />
   </ItemGroup>
-
 </Project>
