--- a/src/KitchenHell.Common.Web/KitchenHell.Common.Web.csproj
+++ b/src/KitchenHell.Common.Web/KitchenHell.Common.Web.csproj
@@ -11,7 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\KitchenHell.Common\KitchenHell.Common.csproj" />
+    <ProjectReference Include="..\KitchenHell.Common\KitchenHell.Common.csproj" />
   </ItemGroup>
 
 </Project>
