--- a/Directory.Packages.props
+++ b/Directory.Packages.props
@@ -1,29 +1,33 @@
 <Project>
-    <PropertyGroup>
-        <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
-        <CentralPackageVersionOverrideEnabled>true</CentralPackageVersionOverrideEnabled>
-    </PropertyGroup>
-    <ItemGroup>
-        <PackageVersion Include="Confluent.Kafka" Version="2.3.0" />
-        <PackageVersion Include="Grpc.AspNetCore" Version="2.59.0" />
-        <PackageVersion Include="Grpc.AspNetCore.HealthChecks" Version="2.59.0" />
-        <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.59.0" />
-        <PackageVersion Include="Grpc.Tools" Version="2.59.0" />
-        <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" />
-        <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
-        <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
-        <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
-        <PackageVersion Include="Polly" Version="8.2.0" />
-        <PackageVersion Include="Serilog.AspNetCore" Version="8.0.0" />
-        <PackageVersion Include="Serilog.Sinks.Async" Version="1.5.0" />
-        <PackageVersion Include="Serilog.Sinks.Console" Version="5.0.1" />
-        <PackageVersion Include="Serilog.Sinks.Console.LogThemes" Version="0.3.0" />
-    </ItemGroup>
+  <PropertyGroup>
+    <ManagePackageVersionsCentrally>true</ManagePackageVersionsCentrally>
+    <CentralPackageVersionOverrideEnabled>true</CentralPackageVersionOverrideEnabled>
+  </PropertyGroup>
+  <ItemGroup>
+    <PackageVersion Include="Confluent.Kafka" Version="2.3.0" />
+    <PackageVersion Include="Google.Protobuf" Version="3.26.1" />
+    <PackageVersion Include="Grpc.AspNetCore" Version="2.62.0" />
+    <PackageVersion Include="Grpc.AspNetCore.HealthChecks" Version="2.62.0" />
+    <PackageVersion Include="Grpc.AspNetCore.Server.Reflection" Version="2.62.0" />
+    <PackageVersion Include="Grpc.Tools" Version="2.62.0">
+      <PrivateAssets>all</PrivateAssets>
+      <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
+    </PackageVersion>
+    <PackageVersion Include="Microsoft.CodeAnalysis.Analyzers" Version="3.3.4" />
+    <PackageVersion Include="Microsoft.CodeAnalysis.CSharp" Version="4.8.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.EntityFrameworkCore.Tools" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Abstractions" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Binder" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.EnvironmentVariables" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Configuration.Json" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.DependencyInjection.Abstractions" Version="8.0.0" />
+    <PackageVersion Include="Microsoft.Extensions.Hosting.Abstractions" Version="8.0.0" />
+    <PackageVersion Include="Polly" Version="8.2.0" />
+    <PackageVersion Include="Serilog.AspNetCore" Version="8.0.0" />
+    <PackageVersion Include="Serilog.Sinks.Async" Version="1.5.0" />
+    <PackageVersion Include="Serilog.Sinks.Console" Version="5.0.1" />
+    <PackageVersion Include="Serilog.Sinks.Console.LogThemes" Version="0.3.0" />
+  </ItemGroup>
 </Project>
